[workspace]
resolver = "2"
members = ["core", "cli", "relay"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "AGPL-3.0-only"
repository = "https://github.com/lords82/arvolo"
homepage = "https://github.com/lords82/arvolo"

[workspace.dependencies]
# shared deps pinned once for all crates
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
arvolo-core = { path = "core" }
