[package]
name = "arvolo-cli"
description = "arvolo command-line client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "arvolo"
path = "src/main.rs"

[dependencies]
arvolo-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
data-encoding = "2"
