[package]
name = "arvolo-cli"
description = "arvolo command-line client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "arvolo"
path = "src/main.rs"

[dependencies]
arvolo-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util = "0.7"
data-encoding = "2"
indicatif = "0.17"
qrcode = "0.14"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
