[package]
name = "arvolo-core"
description = "Arvolo shared core: end-to-end encryption, chunked P2P transfer, and relay-backfill engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["file-transfer", "p2p", "e2ee", "encryption", "hpke"]
categories = ["network-programming", "cryptography"]

[dependencies]
anyhow.workspace = true
tokio = { workspace = true }
iroh = "0.95.1"
rand = "0.9"
postcard = { version = "1", features = ["alloc"] }
data-encoding = "2"

# --- transitive crypto pin (iroh 0.95.1 was built against the RustCrypto rc
# cohort; the later final releases changed APIs and break the build). Pin the
# whole cohort to the exact pre-release versions iroh expects. Not used directly. ---
der = "=0.8.0-rc.9"
spki = "=0.8.0-rc.4"
pkcs8 = "=0.11.0-rc.7"
ed25519 = "=3.0.0-rc.0"
signature = "=3.0.0-rc.3"
blake3 = "1"
hpke = "0.13.0"
chacha20poly1305 = "0.10.1"
spake2 = "0.4.0"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-util = "0.7"
tar = "0.4"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
iroh = { version = "0.95.1", features = ["test-utils"] }
