[package]
name = "arvolo-relay"
description = "Arvolo self-hostable zero-knowledge relay / mailbox (store-and-forward with expiry)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["file-transfer", "relay", "zero-knowledge", "mailbox", "p2p"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "arvolo-relay"
path = "src/main.rs"

[dependencies]
arvolo-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.8"
serde = { version = "1", features = ["derive"] }
rand = "0.9"
data-encoding = "2"
rusqlite = { version = "0.37", features = ["bundled"] }

[dev-dependencies]
arvolo-core.workspace = true
tempfile = "3"
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
data-encoding = "2"
